# huffman-archiver-cpp

./: CMakeCache.txt  CMakeLists.txt  Makefile  archivedFile.hfmn  cmake_install.cmake  huffman  perf.data  perf.data.old  test_file.sh
lib/huffman-lib/: CMakeLists.txt  HuffmanAlgorithm.cpp  Makefile  cmake_install.cmake  encoded_symbol.cpp  huffman_decryptor.cpp  huffman_encryptor.cpp  preCounter.cpp
lib/huffman-lib/include/: HuffmanAlgorithm.h  consts.h  encoded_symbol.h  huffman_decryptor.h  huffman_encryptor.h  preCounter.h  tree.h
src/: impl_consts.h  input_stream.cpp  input_stream.h  main.cpp  output_stream.cpp  output_stream.h
test/: huffman_lib_testing.cpp
test/lol_test/: RESSSSSlol.txt  hafflol.hmfn
